# proiect_full

./: CMakeLists.txt  README.md  build.sh  run.sh
serverapp/: CMakeLists.txt
serverapp/src/: libutils.c  libutils.h  main.c  message_handler.c  message_handler.h  structs.h
serverapp/src/networking/: networking_interface.c  networking_interface.h
serverapp/src/networking/sockets/: sock_internal.h  sockets.h  sockets_linux.c
socketapp/: CMakeLists.txt
socketapp/src/: main.c  sockets.c  sockets.h
src/: console_interface.c  console_interface.h  exports.h  internal.c  internal.h  java_interface.c  structs.h
src/autocad/: autocad.c  autocad.h  desen_final.c
src/data/: base_values.c  capitol_1.c  capitol_2.c  capitol_3.c  capitol_4.c  capitol_5.c  capitol_6.c  data.c  data.h
src/data/anexe/: anexa2.c  anexa3.c  anexa4.c  anexa5.c  anexa6.c  anexa7.c  anexa8.c  anexa9.c  anexe.h
src/networking/: message_handler.c  message_handler.h  networking_interface.c  networking_interface.h
src/networking/sockets/: sockets_linux.c
src/testing/: test.h  test_anexe.c
src/threads/: threading.h
testapp/: CMakeLists.txt
testapp/src/: main.c
